--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,6 @@
             "email": "taylorotwell@gmail.com"
         }
     ],
-    "repositories": [
-        { "type": "vcs", "url": "https://github.com/texnikru/carbon-1.x" }
-    ],
     "require": {
         "php": ">=5.4.0",
         "classpreloader/classpreloader": "~1.0.2",
@@ -20,7 +17,7 @@
         "filp/whoops": "1.1.*",
         "jeremeamia/superclosure": "~1.0.1",
         "monolog/monolog": "~1.6",
-        "nesbot/carbon": "~1.0",
+        "texnikru/carbon-1.x": "~1.0",
         "patchwork/utf8": "~1.1",
         "phpseclib/phpseclib": "0.3.*",
         "predis/predis": "0.8.*",
