--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
             "email": "taylorotwell@gmail.com"
         }
     ],
+    "repositories": [
+        { "type": "vcs", "url": "https://github.com/texnikru/carbon-1.x" },
+        { "type": "vcs", "url": "https://github.com/texnikru/symfony-http-foundation-2.7" }
+    ],
     "require": {
         "php": ">=5.4.0",
         "classpreloader/classpreloader": "~1.0.2",
@@ -17,7 +21,7 @@
         "filp/whoops": "1.1.*",
         "jeremeamia/superclosure": "~1.0.1",
         "monolog/monolog": "~1.6",
-        "nesbot/carbon": "~1.0",
+        "nesbot/carbon": "dev-master",
         "patchwork/utf8": "~1.1",
         "phpseclib/phpseclib": "0.3.*",
         "predis/predis": "0.8.*",
@@ -29,7 +33,7 @@
         "symfony/debug": "2.7.*",
         "symfony/dom-crawler": "2.7.*",
         "symfony/finder": "2.7.*",
-        "symfony/http-foundation": "2.7.*",
+        "symfony/http-foundation": "2.7-dev#3735826",
         "symfony/http-kernel": "2.7.*",
         "symfony/process": "2.7.*",
         "symfony/routing": "2.7.*",
