--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "filp/whoops": "1.1.*",
         "jeremeamia/superclosure": "~1.0.1",
         "monolog/monolog": "~1.6",
-        "nesbot/carbon": "~1.0",
+        "nesbot/carbon": "dev-master",
         "patchwork/utf8": "~1.1",
         "phpseclib/phpseclib": "0.3.*",
         "predis/predis": "0.8.*",
